5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1752_3092.log
== TEST (2019-05-16 17:27:59) 
-- CODE:
jogo=str(input(" "))
v=3
e=2
d=1
cont=0
acum=0

while(jogo!=x):
	if(jogo="v"):
	"v"=3
	elif(jogo="e"):
	"e"=2
	elif(jogo="d"):
	"d"=1
	
	cont=v+e+d
	acum=cont+
	
	


-- ERROR:
File "XXXX", line 9
    if(jogo="v"):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:14) 
-- CODE:
jogo=str(input(" "))
v=3
e=2
d=1
cont=0
acum=0

while(jogo!=x):
	if(jogo=="v"):
	"v"=3
	elif(jogo=="e"):
	"e"=2
	elif(jogo=="d"):
	"d"=1
	
	cont=v+e+d
	acum=cont+
	
	


-- ERROR:
File "XXXX", line 10
    "v"=3
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:28:23) 
-- CODE:
jogo=str(input(" "))
v=3
e=2
d=1
cont=0
acum=0

while(jogo!=x):
	if(jogo=="v"):
	"v"==3
	elif(jogo=="e"):
	"e"==2
	elif(jogo=="d"):
	"d"==1
	
	cont=v+e+d
	acum=cont+
	
	


-- EXECUTION TIME:
0.166129
-- ERROR:
  File "/home/codebench/codes/1752/3092/main.py", line 10
    "v"==3
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:24) 
-- CODE:
jogo=str(input(" "))
v=3
e=2
d=1
cont=0
acum=0

while(jogo!=x):
	if(jogo=="v"):
	"v"==3
	elif(jogo=="e"):
	"e"==2
	elif(jogo=="d"):
	"d"==1
	
	cont=v+e+d
	acum=cont+
	
	


-- ERROR:
File "XXXX", line 10
    "v"==3
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:36) 
-- CODE:
jogo=str(input(" "))
v=3
e=2
d=1
cont=0
acum=0

while(jogo!=x):
	if(jogo=="v"):
	"v"=3
	elif(jogo=="e"):
	"e"=2
	elif(jogo=="d"):
	"d"=1
	
	cont=v+e+d
	acum=cont+
	
	


-- ERROR:
File "XXXX", line 10
    "v"=3
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:53) 
-- CODE:
jogo=str(input(" "))
"v"=3
"e"=2
"d"=1
cont=0
acum=0

while(jogo!=x):
	
	cont=v+e+d
	acum=(cont+jogo)/100
	cont=cont+1
print(acum)
	
	
	


-- ERROR:
File "XXXX", line 2
    "v"=3
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:22) 
-- CODE:
jogo=(input(" "))
"v"=3
"e"=2
"d"=1
cont=0
acum=0

while(jogo!=x):
	
	cont=v+e+d
	acum=(cont+jogo)/100
	cont=cont+1
print(acum)
	
	
	


-- ERROR:
File "XXXX", line 2
    "v"=3
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:38) 
-- CODE:
jogo=(input(" "))
v=3
e=2
d=1
cont=0
acum=0

while(jogo!=x):
	
	cont=v+e+d
	acum=(cont+jogo)/100
	cont=cont+1
print(acum)
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while(jogo!=x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:17) 
-- CODE:
jogo=(input(" "))
v=3
e=2
d=1
x=-1
cont=0
acum=0

while(jogo!=x):
	
	cont=v+e+d
	acum=(cont+jogo)/100
	cont=cont+1
print(acum)
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    acum=(cont+jogo)/100
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:58) 
-- CODE:
jogo=(input(" "))
v=3
e=2
d=1
x=-1
cont=0
acum=0

while(jogo!=x):
	
	cont=v+e+d
	acum=(cont+jogo)/100
	cont=cont+1
print(acum)
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    acum=(cont+jogo)/100
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:08) 
-- CODE:
jogo=int(input(" "))
v=3
e=2
d=1
x=-1
cont=0
acum=0

while(jogo!=x):
	cont=v+e+d
	acum=(cont+jogo)/100
	cont=cont+1
print(acum)
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo=int(input())
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
